[package]
name = "link_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3.0"
iced_web = "0.4.0"
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", branch = "main", default-features = true }
font-kit = { version = "0.10.0", optional = true }
